--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".butterknife.ButterKnifeTestActivity" />
-        <activity android:name=".butterknife.MyButterKnifeTestActivity"></activity>
+        <activity android:name=".butterknife.MyButterKnifeTestActivity" />
+        <activity android:name=".androidapi.AndroidApiTestActivity"></activity>
     </application>
 
 </manifest>
