--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // okhttp
     compile  'com.squareup.okhttp3:okhttp:3.11.0'
 
-    // 屏幕适配   https://github.com/JessYanCoding/AndroidAutoSize  
+    // 屏幕适配   https://github.com/JessYanCoding/AndroidAutoSize
     compile 'me.jessyan:autosize:1.0.1'
+
+    // test aa
 }
