--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <service
             android:name=".aidl.MyAidlService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true"
+            android:process=":aidl_service"/>
 
     </application>
 
