--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <!-- 使用蓝牙所需要的权限-->
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <!-- 使用扫描和设置蓝牙的权限（申明这一个权限必须申明上面一个权限）-->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <!-- 使用蓝牙所需要的权限 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <!-- 使用扫描和设置蓝牙的权限（申明这一个权限必须申明上面一个权限） -->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
     <uses-feature android:name="android.hardware.location.gps" />
-    <!-- 在 Android 6.0 及以上，还需要打开位置权限。如果应用没有位置权限，蓝牙扫描功能不能使用（其它蓝牙操作例如连接蓝牙设备和写入数据不受影响）-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- 在 Android 6.0 及以上，还需要打开位置权限。如果应用没有位置权限，蓝牙扫描功能不能使用（其它蓝牙操作例如连接蓝牙设备和写入数据不受影响） -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -48,7 +48,9 @@
             android:exported="true"
             android:process=":aidl_service" />
 
-        <activity android:name=".androidapi.BlueMainTestActivity"></activity>
+        <activity android:name=".androidapi.BlueMainTestActivity" />
+        <activity android:name=".uidemo.RnPluginDebugListActivity" />
+        <activity android:name=".uidemo.RnPluginDebugAddActivity"></activity>
     </application>
 
 </manifest>
