--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // 屏幕适配   https://github.com/JessYanCoding/AndroidAutoSize
     compile 'me.jessyan:autosize:1.0.1'
 
+    // rx运行是权限
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
+
     // test ff
     // test ee e e
 }
