--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <!-- 录音权限 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- wifi权限 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -65,7 +65,8 @@
             android:name=".uidemo.dragging.FloatingActionBtnTestActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".uidemo.picker.PickerTestActivity" />
-        <activity android:name=".androidapi.AudioDemoTestActivity"></activity>
+        <activity android:name=".androidapi.AudioDemoTestActivity" />
+        <activity android:name=".androidapi.LifeCycleTestActivity"></activity>
     </application>
 
 </manifest>
