--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //启用renderscript
+//        renderscriptTargetApi = 18
+//        renderscriptSupportModeEnabled = true
+
     }
     buildTypes {
         release {
