--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".uidemo.picker.PickerTestActivity" />
         <activity android:name=".androidapi.AudioDemoTestActivity" />
-        <activity android:name=".androidapi.LifeCycleTestActivity"></activity>
+        <activity android:name=".androidapi.LifeCycleTestActivity" />
+        <activity android:name=".thirdlib.RenderScriptBlurDemoActivity"></activity>
     </application>
 
 </manifest>
