--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,10 @@
         <activity android:name=".androidapi.AudioDemoTestActivity" />
         <activity android:name=".androidapi.LifeCycleTestActivity" />
         <activity android:name=".thirdlib.RenderScriptBlurDemoActivity" />
-        <activity android:name=".androidapi.SurfaceViewDrawDemoActivity"></activity>
+        <activity android:name=".androidapi.SurfaceViewDrawDemoActivity" />
+        <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
+        <activity android:name=".books.BooksMainTestActivity" />
+        <activity android:name=".books.jjzg.JjzgMainTestActivity"></activity>
     </application>
 
 </manifest>
