--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     })
     compile project(':lib-anno-processors')
     compile project(':lib-annotaions')
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.3.1'
 
     compile "com.android.support:recyclerview-v7:25.0.0"
 
