--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
         <activity android:name=".androidapi.SurfaceViewDrawDemoActivity" />
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
         <activity android:name=".books.BooksMainTestActivity" />
-        <activity android:name=".books.jjzg.JjzgMainTestActivity"></activity>
+        <activity android:name=".books.jjzg.JjzgMainTestActivity" />
+        <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity"></activity>
     </application>
 
 </manifest>
