--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,9 @@
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
         <activity android:name=".books.BooksMainTestActivity" />
         <activity android:name=".books.jjzg.JjzgMainTestActivity" />
-        <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity"></activity>
+        <activity
+            android:name=".uidemo.eventtrans.ViewEventTransTestActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
 
 </manifest>
