--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".uidemo.picker.PickerTestActivity" />
         <activity android:name=".androidapi.AudioDemoTestActivity" />
-        <activity android:name=".androidapi.LifeCycleTestActivity" />
+        <activity android:name=".androidapi.LifeCycleTestActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".thirdlib.RenderScriptBlurDemoActivity" />
         <activity android:name=".androidapi.SurfaceViewDrawDemoActivity" />
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
