--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.application'
 
+def configInfo = rootProject.ext.android
+
+print(configInfo)
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion "27.0.3"
+    compileSdkVersion configInfo.compileSdkVersion
+    buildToolsVersion configInfo.buildToolsVersion
     defaultConfig {
         applicationId "com.android.study.example"
-        minSdkVersion 18
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion configInfo.minSdkVersion
+        targetSdkVersion configInfo.targetSdkVersion
+        versionCode configInfo.versionCode
+        versionName configInfo.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         //启用renderscript
@@ -25,31 +29,31 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':lib-anno-processors')
-    compile project(':lib-annotaions')
+    annotationProcessor project(':lib-anno-processors')
+    implementation project(':lib-annotaions')
     //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:28.0.0'
 
-    compile "com.android.support:recyclerview-v7:25.0.0"
+    implementation "com.android.support:recyclerview-v7:28.0.0"
 
-    compile 'com.jakewharton:butterknife:8.8.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // okhttp
-    compile 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
     // 屏幕适配   https://github.com/JessYanCoding/AndroidAutoSize
-    compile 'me.jessyan:autosize:1.0.1'
+    implementation 'me.jessyan:autosize:1.0.1'
 
     // rx运行是权限
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
+    implementation 'io.reactivex:rxandroid:1.1.0'
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
 
     // test ff
     // test ee e e
