--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,9 +69,7 @@
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
         <activity android:name=".books.BooksMainTestActivity" />
         <activity android:name=".books.jjzg.JjzgMainTestActivity" />
-        <activity
-            android:name=".uidemo.eventtrans.ViewEventTransTestActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity"/>
         <activity android:name=".uidemo.mapsweeper.MapViewDemoActivity" />
         <activity android:name=".uidemo.animation.AnimationDemoActivity" />
         <activity android:name=".uidemo.inputdialog.InputDialogDemoActivity" />
