--- a/lib-anno-processors/build.gradle
+++ b/lib-anno-processors/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':lib-annotaions')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':lib-annotaions')
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
