--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'io.reactivex:rxandroid:1.1.0'
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
 
+    // 开源有进度webview
+    implementation 'com.github.youlookwhat:WebProgress:1.1.0'
+
     // test ff
     // test ee e e
 }
