--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".uidemo.webview.WebViewDemoActivity"></activity>
+        <activity android:name=".androidapi.AndroidOOMActivity"></activity>
+        <activity android:name=".uidemo.webview.WebViewDemoActivity" />
         <activity android:name=".thirdlib.FrescoDemoActivity" />
 
         <meta-data
