--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".androidapi.OrientationTestActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:name=".androidapi.OrientationTestActivity"/>
         <activity android:name=".androidapi.AndroidOOMActivity" />
         <activity android:name=".uidemo.webview.WebViewDemoActivity" />
         <activity android:name=".thirdlib.FrescoDemoActivity" />
