--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".androidapi.OrientationTestActivity"/>
+        <activity android:name=".uidemo.screenshot.ScreenshotTestActivity"></activity>
+        <activity android:name=".androidapi.OrientationTestActivity" />
         <activity android:name=".androidapi.AndroidOOMActivity" />
         <activity android:name=".uidemo.webview.WebViewDemoActivity" />
         <activity android:name=".thirdlib.FrescoDemoActivity" />
