--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6'
 
+    // 开源webview
+    implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
+
     // test ff
     // test ee e e
 }
