--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,10 @@
         <activity android:name=".thirdlib.RenderScriptBlurDemoActivity" />
         <activity android:name=".androidapi.SurfaceViewDrawDemoActivity" />
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
-        <activity android:name=".books.BooksMainTestActivity" />
+        <activity
+            android:name=".books.BooksMainTestActivity"
+            android:launchMode="singleInstance"
+            />
         <activity android:name=".books.jjzg.JjzgMainTestActivity" />
         <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity" />
         <activity android:name=".uidemo.mapsweeper.MapViewDemoActivity" />
