--- a/myaidlclient/src/main/AndroidManifest.xml
+++ b/myaidlclient/src/main/AndroidManifest.xml
@@ -9,14 +9,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AidlClientTestMainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AidlClientSecondTestActivity"></activity>
+        <activity android:name=".AidlClientSecondTestActivity" />
+        <activity android:name=".AidlClientTestMainActivity" />
+        <activity
+            android:name=".outapp.OutAppTestActivity"
+            android:launchMode="singleTop">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="com.jack.demo"
+                    android:pathPattern=".*"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".outapp.OutCenterTransferActivity"
+            android:launchMode="singleInstance"
+            >
+
+        </activity>
     </application>
 
 </manifest>
