--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".androidapi.WuZhangAiTestActivity"></activity>
+        <activity android:name=".performance_optimization.PerformOptMainTestActivity"></activity>
+        <activity android:name=".performance_optimization.TraceViewUseTestActivity" />
+        <activity android:name=".androidapi.WuZhangAiTestActivity" />
         <activity android:name=".thirdlib.ThirdLibTestActivity" />
         <activity android:name=".thirdlib.LeakCanaryTestActivity" />
         <activity
