--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,8 @@
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
         <activity
             android:name=".books.BooksMainTestActivity"
-            android:launchMode="singleInstance" />
+            android:theme="@style/TranslucentActivityTheme"
+            />
         <activity android:name=".books.jjzg.JjzgMainTestActivity" />
         <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity" />
         <activity android:name=".uidemo.mapsweeper.MapViewDemoActivity" />
