测试 跨app跳转

--- a/myaidlclient/src/main/AndroidManifest.xml
+++ b/myaidlclient/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".outapp.ExportedActivity"
+            android:exported="true"
+            />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +24,10 @@
         <activity android:name=".AidlClientTestMainActivity" />
         <activity
             android:name=".outapp.OutAppTestActivity"
-            android:launchMode="singleTop">
-
-        </activity>
+            android:launchMode="singleTop"></activity>
         <activity
             android:name=".outapp.OutCenterTransferActivity"
-            android:launchMode="singleInstance"
-            >
+            android:launchMode="singleInstance">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
