--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,8 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 录音权限 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- wifi权限 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".MainApplication"
@@ -28,9 +27,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".androidapi.OpenOtherAppActivity"></activity>
 
         <provider
-            android:name="com.android.study.example.AppFileProvider"
+            android:name=".AppFileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -39,7 +39,7 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".androidapi.SharedPreferencesTestActivity"></activity>
+        <activity android:name=".androidapi.SharedPreferencesTestActivity" />
         <activity android:name=".performance_optimization.PerformOptMainTestActivity" />
         <activity android:name=".performance_optimization.TraceViewUseTestActivity" />
         <activity android:name=".androidapi.WuZhangAiTestActivity" />
@@ -113,8 +113,7 @@
         <activity android:name=".books.jjzg.chapter2.Chapter2TestActivity" />
         <activity
             android:name=".books.BooksMainTestActivity"
-            android:theme="@style/TranslucentActivityTheme"
-            />
+            android:theme="@style/TranslucentActivityTheme" />
         <activity android:name=".books.jjzg.JjzgMainTestActivity" />
         <activity android:name=".uidemo.eventtrans.ViewEventTransTestActivity" />
         <activity android:name=".uidemo.mapsweeper.MapViewDemoActivity" />
