--- a/myaidlclient/src/main/AndroidManifest.xml
+++ b/myaidlclient/src/main/AndroidManifest.xml
@@ -11,8 +11,12 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".outapp.ExportedActivity"
-            android:exported="true"
-            />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.study.action.action_activity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
