--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".androidapi.ViewTestActivity"></activity>
+        <activity android:name=".books.TaskStackTestActivity"></activity>
+        <activity android:name=".androidapi.ViewTestActivity" />
         <activity android:name=".androidapi.OpenOtherAppActivity" />
 
         <provider
