基本的activity 跨应用跳转

--- a/myaidlclient/src/main/AndroidManifest.xml
+++ b/myaidlclient/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Main2Activity"></activity>
         <activity
             android:name=".outapp.ExportedActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.android.study.action.action_activity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -28,7 +30,7 @@
         <activity android:name=".AidlClientTestMainActivity" />
         <activity
             android:name=".outapp.OutAppTestActivity"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTop" />
         <activity
             android:name=".outapp.OutCenterTransferActivity"
             android:launchMode="singleInstance">
