--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".uidemo.webview.WebViewJsDemoActivity"></activity>
+        <activity
+            android:name=".broadcast.LocalBroadcastSendDemoActivity"
+            android:process=":sendbroadcast"
+            />
+        <activity android:name=".broadcast.LocalBroadcastRegisterDemoActivity" />
+        <activity android:name=".uidemo.webview.WebViewJsDemoActivity" />
         <activity android:name=".books.TaskStackTestActivity" />
         <activity android:name=".androidapi.ViewTestActivity" />
         <activity android:name=".androidapi.OpenOtherAppActivity" />
