--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".androidapi.NetworkTestActivity"></activity>
         <activity
             android:name=".broadcast.LocalBroadcastSendDemoActivity"
             android:process=":sendbroadcast"
