--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,30 +10,32 @@
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 使用扫描和设置蓝牙的权限（申明这一个权限必须申明上面一个权限） -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
     <uses-feature android:name="android.hardware.location.gps" /> <!-- 在 Android 6.0 及以上，还需要打开位置权限。如果应用没有位置权限，蓝牙扫描功能不能使用（其它蓝牙操作例如连接蓝牙设备和写入数据不受影响） -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />  <!-- 粗略定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    <!-- 精确定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 粗略定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 精确定位 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 录音权限 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- wifi权限 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+<!--    <uses-permission android:name="android.permission.REORDER_TASKS" />-->
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:preserveLegacyExternalStorage="true"
         android:requestLegacyExternalStorage="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".androidapi.NetworkTestActivity"></activity>
+        <activity android:name=".mainapp.MainAppTestActivity"></activity>
+        <activity android:name=".androidapi.NetworkTestActivity" />
         <activity
             android:name=".broadcast.LocalBroadcastSendDemoActivity"
-            android:process=":sendbroadcast"
-            />
+            android:process=":sendbroadcast" />
         <activity android:name=".broadcast.LocalBroadcastRegisterDemoActivity" />
         <activity android:name=".uidemo.webview.WebViewJsDemoActivity" />
         <activity android:name=".books.TaskStackTestActivity" />
@@ -130,11 +132,12 @@
         <activity android:name=".uidemo.mapsweeper.MapViewDemoActivity" />
         <activity android:name=".uidemo.animation.AnimationDemoActivity" />
         <activity android:name=".uidemo.inputdialog.InputDialogDemoActivity" />
-
-        <activity android:name=".androidapi.ShareIsolationTestActivity" >
+        <activity android:name=".androidapi.ShareIsolationTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
