--- a/myaidlclient/src/main/AndroidManifest.xml
+++ b/myaidlclient/src/main/AndroidManifest.xml
@@ -22,21 +22,22 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AidlClientSecondTestActivity" />
-        <activity android:name=".AidlClientTestMainActivity" />
+        <activity android:name=".AidlClientSecondTestActivity" android:exported="false"/>
+        <activity android:name=".AidlClientTestMainActivity" android:exported="false"/>
         <activity
             android:name=".outapp.OutAppTestActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop" android:exported="false"/>
         <activity
             android:name=".outapp.OutCenterTransferActivity"
-            android:launchMode="singleInstance">
+            android:launchMode="singleInstance"
+            android:exported="true">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -53,7 +54,7 @@
                     android:scheme="mihomeplugin" />
             </intent-filter>
         </activity>
-        <activity android:name=".outapp.SubAppTestActivity">
+        <activity android:name=".outapp.SubAppTestActivity" android:exported="true">
             <intent-filter>
 
                 <!--下面这几行也必须得设置-->
